# OS_labs

./: .gitignore  README.md  Reverse.c  TroubleShooting.md  TroubleShooting_Compulsory.md  Worksheet_Selective.md  reverse.c  seucat  seucat.c  seugrep  seugrep.c  seuunzip  seuunzip.c  seuzip  seuzip.c
projects/Unix_Shell/tests/: 3.err
projects/Unix_Shell/tests-out/: 13.err  22.out  4.err  4.out  7.out  8.out
projects/Xv6-Syscall/modified/: defs.h  syscall.c  syscall.h  usys.S
projects/Xv6-Syscall/src/: Makefile  Makefile.test  _cat  _echo  _forktest  _grep  _init  _kill  _ln  _ls  _mkdir  _rm  _sh  _stressfs  _test_1  _test_2  _usertests  _wc  _zombie  bio.d  cat.asm  cat.d  cat.sym  console.d  echo.asm  echo.d  echo.sym  exec.d  file.d  forktest.asm  forktest.d  fs.d  fs.img  grep.asm  grep.d  grep.sym  ide.d  init.asm  init.d  init.sym  (+68 more)
projects/Xv6-Virtual_Memory/modified/: Makefile.test  defs.h  exec.c  proc.h  syscall.c  syscall.h  sysproc.c  test_1.c  test_mprotect.c  user.h  usertests.c  usys.S  vm.c
seush/: CMakeCache.txt  CMakeLists.txt  Makefile  batch.txt  cmake_install.cmake  code_snippets  loop.c  loop.h  macros.h  out  run_command.c  run_command.h  seush  seush.c  structures.h  utilities.c  utilities.h
